[package]
name        = "ug_max"
version     = "2.0.0"
edition     = "2021"
authors     = [ "software9119.technology" ]
license     = "MIT"
description = "Down-top left-right defined font. Seemly design for 5x5 display."
repository  = "https://github.com/bravequickcleverfibreyarn/ug_max"
keywords    = [ "font", "microbit", "5x5" ]
categories  = [ "embedded development" ]
