[package]
name        = "ug_max"
version     = "4.0.4"
edition     = "2021"
authors     = [ "software9119.technology" ]
license     = "MIT"
description = "Down-top left-right defined font. Seemly design for 5x5 display."
repository  = "https://github.com/deep-outcome/ug_max"
keywords    = [ "font", "microbit", "5x5", "embedded", "LED-display" ]
categories  = [ "no-std", "no-std::no-alloc", "embedded" ]
documentation = "https://docs.rs/ug_max/latest/ug_max/"
exclude = ["/anc", "/pre"]
